--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "xcsoar-data-repository",
   "homepage": "https://github.com/XCSoar/xcsoar-data-repository",
+  "main": "repository.json",
   "repository": {
     "type": "git",
     "url": "https://github.com/XCSoar/xcsoar-data-repository.git"
@@ -9,6 +10,7 @@
     "url": "https://github.com/XCSoar/xcsoar-data-repository/issues"
   },
   "scripts": {
+    "convert": "bin/convert.js",
     "test": "mocha -s 1000"
   },
   "devDependencies": {
