--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ after_success:
 addons:
   ssh_known_hosts: 08d3d27bc8bf5c6108034528dd60bb6021cf8c41fdce6f22aab5176afa73129d
 before_install:
-- openssl aes-256-cbc -K $encrypted_d58e3837dba5_key -iv $encrypted_d58e3837dba5_iv
-  -in xcsoar-data-repository_rsa.enc -out xcsoar-data-repository_rsa -d
-- openssl aes-256-cbc
+- openssl aes-256-cbc -K $encrypted_d58e3837dba5_key -iv $encrypted_d58e3837dba5_iv -in xcsoar-data-repository_rsa.enc -out xcsoar-data-repository_rsa -d
 before_deploy:
 - eval "$(ssh-agent s-)"
 - chmod 600 $TRAVIS_BUILD_DIR/xcsoar-data-repository_rsa
