--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,19 @@ language: node_js
 sudo: false
 env:
   secure: Cxycm98UqGetBaFvU7PwTbrdV7FHPUmUSZO8z4e0te3+J13PJBnNO/fysOlvXhDeM4GN3CeBjcOaKIQGhxJHv/h7b0h7/qwwYrU0leatc9FETagP7EJmFaSYne3SN7D8nJQ3LePmO1TtkFkBZw35anz8Sa75ihupR9wV6ruvFvw=
+  global:
+  - secure: C23JpPYd38i1yxFAkZnF8m3RVs4CpMtSg2LkNOLtdS43odOtsLIXtJPC05zJCcjCR8Lz8lau3qyYybdA0sbxboN0qZiN4OQCiVyOvfDXWvR471pZ2Il2UDgz+IuVoVHg9OIyC2cVkxTRUQKXdwhPqY1Ge9lpkUOpps+EDEVg+Sk=
+  - secure: l+uIIycCHs5dm4JFTZZQ4X73rZUKRGHItewg4ZrphHm008Z3S67uSPcrgaDCGcOCsnbAHM7g61z766CvF9nNEmEkRELvAf0qsUOC/+9Cy9lB7neBbIAWoXQQ3gl0oaoZtcWf/lV13UAHxjNVv7zkCXy2mn+OTgoko4PxGQpyVXs=
+  - secure: dnm/4D5n3ufaGR+Al5xjF/iU5+//YShkc1YCkeKPoZBBsaqROhKZ4NFvhJclY5XPu0zgHKtfSdPdbP2x3I8On4hNrAy6ReLCG90a6H7J1wUNDZII41uUrJDXFddm0JC5Uy7TG6vdo5GPEoGTHpQktyE5tKNV1ntPUjwPTolQCBE=
+  - secure: CxLzFAPgn7+fJOEgTTb8O/FvD5cXD7lhHMz7/Q0mWMVuTilFZt065uKcjdIOBJeJP5yeEUFp2w5wq6NS+zcRjbvjbmM+PiXviz5JLy55k8eS/XZ6EEWI/1zOmB4E9Caltr9CmFhelZtwH0y2Dt7zo/Mpu+h3iKi6gViAwU1ZB3I=
 after_success:
 - test $TRAVIS_PULL_REQUEST == 'false' && test $TRAVIS_BRANCH == 'master' && npm run
   convert &&
 addons:
   ssh_known_hosts: 08d3d27bc8bf5c6108034528dd60bb6021cf8c41fdce6f22aab5176afa73129d
 before_install:
-- openssl aes-256-cbc -K $encrypted_d58e3837dba5_key -iv $encrypted_d58e3837dba5_iv -in xcsoar-data-repository_rsa.enc -out xcsoar-data-repository_rsa -d
+- openssl aes-256-cbc -K $encrypted_d58e3837dba5_key -iv $encrypted_d58e3837dba5_iv
+  -in xcsoar-data-repository_rsa.enc -out xcsoar-data-repository_rsa -d
 before_deploy:
 - eval "$(ssh-agent -s)"
 - chmod 600 $TRAVIS_BUILD_DIR/xcsoar-data-repository_rsa
@@ -17,6 +23,6 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: scp $TRAVIS_BUILD_DIR/repository repository@download.xcsoar.org:/var/www/xcsoar/download/repository
+  script: scp $TRAVIS_BUILD_DIR/repository -P $DEPLOY_PORT ${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_PATH}
   on:
     branch: master
