tried again with custom port

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ after_success:
 - test $TRAVIS_PULL_REQUEST == 'false' && test $TRAVIS_BRANCH == 'master' && npm run
   convert &&
 addons:
-  ssh_known_hosts: download.xcsoar.org
+  ssh_known_hosts: download.xcsoar.org:${DEPLOY_PORT}
 before_install:
 - openssl aes-256-cbc -K $encrypted_d58e3837dba5_key -iv $encrypted_d58e3837dba5_iv
   -in xcsoar-data-repository_rsa.enc -out xcsoar-data-repository_rsa -d
