--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,14 @@ env:
   - secure: l+uIIycCHs5dm4JFTZZQ4X73rZUKRGHItewg4ZrphHm008Z3S67uSPcrgaDCGcOCsnbAHM7g61z766CvF9nNEmEkRELvAf0qsUOC/+9Cy9lB7neBbIAWoXQQ3gl0oaoZtcWf/lV13UAHxjNVv7zkCXy2mn+OTgoko4PxGQpyVXs=
   - secure: dnm/4D5n3ufaGR+Al5xjF/iU5+//YShkc1YCkeKPoZBBsaqROhKZ4NFvhJclY5XPu0zgHKtfSdPdbP2x3I8On4hNrAy6ReLCG90a6H7J1wUNDZII41uUrJDXFddm0JC5Uy7TG6vdo5GPEoGTHpQktyE5tKNV1ntPUjwPTolQCBE=
   - secure: CxLzFAPgn7+fJOEgTTb8O/FvD5cXD7lhHMz7/Q0mWMVuTilFZt065uKcjdIOBJeJP5yeEUFp2w5wq6NS+zcRjbvjbmM+PiXviz5JLy55k8eS/XZ6EEWI/1zOmB4E9Caltr9CmFhelZtwH0y2Dt7zo/Mpu+h3iKi6gViAwU1ZB3I=
-after_success:
-- test $TRAVIS_PULL_REQUEST == 'false' && test $TRAVIS_BRANCH == 'master' && npm run
-  convert &&
-before_install:
-- openssl aes-256-cbc -K $encrypted_d58e3837dba5_key -iv $encrypted_d58e3837dba5_iv
-  -in xcsoar-data-repository_rsa.enc -out xcsoar-data-repository_rsa -d
+
 before_deploy:
+- openssl aes-256-cbc -K $encrypted_d58e3837dba5_key -iv $encrypted_d58e3837dba5_iv -in xcsoar-data-repository_rsa.enc -out xcsoar-data-repository_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 $TRAVIS_BUILD_DIR/xcsoar-data-repository_rsa
 - ssh-add $TRAVIS_BUILD_DIR/xcsoar-data-repository_rsa
 - npm run convert
+
 deploy:
   provider: script
   skip_cleanup: true
