--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "mocha -s 1000"
   },
   "devDependencies": {
-    "mocha": "^2.3.4",
-    "request": "^2.67.0"
+    "mocha": ">=2.3.4",
+    "request": ">=2.67.0"
   }
 }
