--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -4,11 +4,11 @@
 name: Test URLs with mocha 
 
 on:
-  pull_request:
+  push:
     branches: [ master ]
 
 jobs:
-  test:
+  test-deploy:
 
     runs-on: ubuntu-latest
 
@@ -24,3 +24,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm test
+    - run: npm run convert
