--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,14 +1,11 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Test URLs with mocha 
+name: Test PR with mocha 
 
 on:
-  pull_request:
+  push:
     branches: [ master ]
 
 jobs:
-  test:
+  test-pr:
 
     runs-on: ubuntu-latest
 
@@ -24,3 +21,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - run: npm test
+    - run: npm run convert
