--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,14 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Test URLs with mocha 
+name: Test URls and Deploy
 
 on:
   push:
     branches: [ master ]
 
 jobs:
-  test-deploy:
+  test_and_deploy:
 
     runs-on: ubuntu-latest
 
